--- a/rules.yaml
+++ b/rules.yaml
@@ -31,9 +31,9 @@ rules:
     job_output:
       - 'nfs: server 10.\d+.\d+.\d+ not responding, still trying'
   description: |
-    lkft-ltp-sched issue on juno-r2 and x86
-    nfs: server 10.66.16.115 not responding, still trying
-    No bug open yet
+    LKFT: linux-mainline: x86 : ltp sched tests hang due to NFS not responding
+    note: also occurs on juno-r2
+    https://bugs.linaro.org/show_bug.cgi?id=3338
 
 # https://lkft.validation.linaro.org/scheduler/job/46682
 - re_match:
